// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Component) Processors should render when loading correctly 1`] = `
<React.Fragment>
  <section
    className="cards"
  >
    <ActionBar
      desc={
        <React.Fragment>
          A processor is a third-party with access to your users data.
          <br />
          You can manage from here which are enabled or not, and which actions are allowed to access.
        </React.Fragment>
      }
      title="Processors"
    >
      <Component
        onClick={[Function]}
        text="+ Add Processor"
      />
    </ActionBar>
    <div
      className="content"
    >
      <Loader />
    </div>
  </section>
</React.Fragment>
`;

exports[`(Component) Processors should render when not loading correctly 1`] = `
<React.Fragment>
  <section
    className="cards"
  >
    <ActionBar
      desc={
        <React.Fragment>
          A processor is a third-party with access to your users data.
          <br />
          You can manage from here which are enabled or not, and which actions are allowed to access.
        </React.Fragment>
      }
      title="Processors"
    >
      <Component
        onClick={[Function]}
        text="+ Add Processor"
      />
    </ActionBar>
    <div
      className="row"
      key="0"
    >
      <ProcessorCard
        data={
          Object {
            "consented": 72,
            "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum placeat neque, pariatur ipsa qui facere nobis error iste consectetur quo exercitationem!",
            "logoUrl": "nielsen.svg",
            "name": "Nielsen",
            "scopes": Array [
              "Full Name",
              "Email",
              "Phone Number",
            ],
          }
        }
        key="0"
        onClick={[Function]}
        onDelete={[Function]}
      />
      <ProcessorCard
        data={
          Object {
            "consented": 64,
            "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum placeat neque, pariatur ipsa qui facere nobis error iste consectetur quo exercitationem!",
            "logoUrl": "liveramp.svg",
            "name": "Live Ramp",
            "scopes": Array [
              "Email",
            ],
          }
        }
        key="1"
        onClick={[Function]}
        onDelete={[Function]}
      />
      <ProcessorCard
        data={
          Object {
            "consented": 25,
            "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum placeat neque, pariatur ipsa qui facere nobis error iste consectetur quo exercitationem!",
            "logoUrl": "experian.svg",
            "name": "Experian",
            "scopes": Array [
              "Full Name",
              "Phone Number",
            ],
          }
        }
        key="2"
        onClick={[Function]}
        onDelete={[Function]}
      />
    </div>
  </section>
</React.Fragment>
`;
